--- a/Bootstrap/starter_code.html
+++ b/Bootstrap/starter_code.html
@@ -6,7 +6,7 @@
 
     <!-- Link Bootstrap through CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- See Bootstrap.css file for formatted code -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> <!-- Optional if only using CSS features from Bootstrap -->
 
     <title>Hello World</title>
 </head>
