--- a/Bootstrap/BootstrapExample.html
+++ b/Bootstrap/BootstrapExample.html
@@ -15,12 +15,13 @@
 <body>
 <h1>Hello World!</h1>
 
-<!--Question 3-->
 <div class="container" style="background-color: #75e3ff">
-    <p>This text is inside a container</p>
+    <p>This text is inside a container. This is a solution to Q3.</p>
 </div>
-<div class="container-fluid" style="background-color: #f88896">
-    <p>This text is inside a fluid container</p>
+
+
+<div class="container p-5" style="background-color: #f88896">
+    <p>This text is inside a fluid container with padding setting 5. This is a solution to Q5.</p>
 </div>
 </body>
 </html>
