--- a/Bootstrap/BootstrapExample.html
+++ b/Bootstrap/BootstrapExample.html
@@ -17,11 +17,57 @@
 
 <div class="container" style="background-color: #75e3ff">
     <p>This text is inside a container. This is a solution to Q3.</p>
+    <p  class="text-muted">This text is muted. Q6 solution.</p>
 </div>
 
 
 <div class="container p-5" style="background-color: #f88896">
-    <p>This text is inside a fluid container with padding setting 5. This is a solution to Q5.</p>
+    <p>This text is inside a fluid container with padding setting 5. This is a solution to Q4.</p>
+    <p class="text-primary">This is primary text. Q6 solution.</p>
+</div>
+
+<h2>Q5 Solution</h2>
+<div class="row">
+    <div class="col m-1" style="background-color: #86b7fe">
+        <h3>Column 1</h3>
+        <p class="text-success">This text indicates success. Q6 solution.</p>
+    </div>
+    <div class="col m-1" style="background-color: #b6d4fe">
+        <h3>Column 2</h3>
+        <p class="text-info">This is info text. Q6 solution.</p>
+    </div>
+    <div class="col m-1" style="background-color: #cff4fc">
+        <h3>Column 3</h3>
+        <p class="text-warning">This text is a warning. Q6 solution.</p>
+    </div>
+    <div class="col m-1">
+        <h3>Column 4</h3>
+        <p class="text-danger">This text shows danger. Q6 solution.</p>
+    </div>
+    <div class="col m-1">
+        <h3>Column 5</h3>
+        <p class="text-secondary">This is secondary text. Q6 solution.</p>
+    </div>
+    <div class="col m-1" style="background-color: black">
+        <h3 class="text-white">Column 6</h3>
+        <p class="text-white">This is white text. Q6 solution.</p>
+    </div>
+    <div class="col m-1">
+        <h3>Column 7</h3>
+        <p class="text-dark">This is dark text. Q6 solution.</p>
+    </div>
+    <div class="col m-1" style="background-color: black">
+        <h3 class="text-light">Column 8</h3>
+        <p class="text-light">This is light grey text. Q6 solution.</p>
+    </div>
+    <div class="col m-1">
+        <h3>Column 9</h3>
+        <p class="text-black-50">This is black text with 50% opacity. Q6 solution.</p>
+    </div>
+    <div class="col m-1" style="background-color: black">
+        <h3 class="text-light">Column 10</h3>
+        <p class="text-white-50">This is white text with 50% opacity. Q6 solution.</p>
+    </div>
 </div>
 </body>
 </html>
