--- a/Bootstrap/BootstrapExample.html
+++ b/Bootstrap/BootstrapExample.html
@@ -15,30 +15,36 @@
 <body>
 <h1>Hello World!</h1>
 
-<div class="container" style="background-color: #75e3ff">
+<div class="container bg-primary">
     <p>This text is inside a container. This is a solution to Q3.</p>
-    <p  class="text-muted">This text is muted. Q6 solution.</p>
+    <p class="text-muted bg-light">This text is muted. Q6 solution.
+        <br>It also has the light grey background. Q7 solution.</p>
+    <p>This container has the primary background. Q7 solution.</p>
 </div>
 
 
-<div class="container p-5" style="background-color: #f88896">
+<div class="container p-5 bg-success">
     <p>This text is inside a fluid container with padding setting 5. This is a solution to Q4.</p>
-    <p class="text-primary">This is primary text. Q6 solution.</p>
+    <p class="text-primary bg-warning">This is primary text. Q6 solution.
+        <br>It also has the warning background. Q7 solution.</p>
+    <p>This container has the success background. Q7 solution.</p>
 </div>
 
 <h2>Q5 Solution</h2>
 <div class="row">
-    <div class="col m-1" style="background-color: #86b7fe">
+    <div class="col m-1 bg-secondary">
         <h3>Column 1</h3>
-        <p class="text-success">This text indicates success. Q6 solution.</p>
+        <p>This column has the secondary background. Q7 solution.</p>
     </div>
-    <div class="col m-1" style="background-color: #b6d4fe">
+    <div class="col m-1">
         <h3>Column 2</h3>
+        <p class="text-success">This text indicates success. Q6 solution.</p>
         <p class="text-info">This is info text. Q6 solution.</p>
     </div>
-    <div class="col m-1" style="background-color: #cff4fc">
+    <div class="col m-1 bg-danger text-warning">
         <h3>Column 3</h3>
-        <p class="text-warning">This text is a warning. Q6 solution.</p>
+        <p>This text is a warning. Q6 solution.</p>
+        <p>This column also has the danger background. Q7 solution.</p>
     </div>
     <div class="col m-1">
         <h3>Column 4</h3>
@@ -48,17 +54,19 @@
         <h3>Column 5</h3>
         <p class="text-secondary">This is secondary text. Q6 solution.</p>
     </div>
-    <div class="col m-1" style="background-color: black">
-        <h3 class="text-white">Column 6</h3>
-        <p class="text-white">This is white text. Q6 solution.</p>
+    <div class="col m-1 bg-dark text-white">
+        <h3>Column 6</h3>
+        <p>This is white text. Q6 solution.</p>
+        <p>This column has the dark background. Q7 solution.</p>
     </div>
     <div class="col m-1">
         <h3>Column 7</h3>
         <p class="text-dark">This is dark text. Q6 solution.</p>
     </div>
-    <div class="col m-1" style="background-color: black">
+    <div class="col m-1 bg-info">
         <h3 class="text-light">Column 8</h3>
-        <p class="text-light">This is light grey text. Q6 solution.</p>
+        <p class="text-light">This is light grey text. Q6 solution.
+            <br>This column ahs the info background. Q7 solution.</p>
     </div>
     <div class="col m-1">
         <h3>Column 9</h3>
