--- a/Bootstrap/BootstrapExample.html
+++ b/Bootstrap/BootstrapExample.html
@@ -20,6 +20,7 @@
     <p class="text-muted bg-light">This text is muted. Q6 solution.
         <br>It also has the light grey background. Q7 solution.</p>
     <p>This container has the primary background. Q7 solution.</p>
+    <p style="color: salmon">I overrode the colour of this text. Q6a solution.</p>
 </div>
 
 
