--- a/DOM/DOMexamples.html
+++ b/DOM/DOMexamples.html
@@ -2,11 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <title>DOM Examples</title>
 </head>
+
 <body>
-<img src="KARD M Countdown.webp" alt="KARD at M Countdown" id="KARD photo">
-<button type="button" onclick=imgSwap()>Change Image</button>
+<div class="row">
+    <div class="col container pt-2 m-2 text-center" id="KARD Display">
+        <img src="KARD M Countdown.webp" alt="KARD at M Countdown" id="KARD photo" class="pb-2">
+        <h4 id="KARD photo caption">KARD at M Countdown</h4>
+        <div class="btn-group">
+            <button type="button" onclick=imgSwap() class="ms-2 btn-outline-dark">Change Image</button>
+            <button type="button" onclick=imgShrink() class="ms-2 btn-outline-dark">Shrink Image</button>
+            <button type="button" onclick=imgGrow() class="ms-2 btn-outline-dark">Grow Image</button>
+            <button type="button" onclick=memberAdd() class="ms-2 btn-outline-dark">Add Random Member</button>
+        </div>
+    </div>
+    <div id="Members List" class="col">
+        <p class="fw-bold">Members List</p>
+    </div>
+</div>
 <script src="DOMexamples.js"></script>
 </body>
 </html>
