--- a/DOM/DOMexamples.html
+++ b/DOM/DOMexamples.html
@@ -16,9 +16,9 @@
         <img src="KARD M Countdown.webp" alt="KARD at M Countdown" id="KARD photo" class="pb-2">
         <h4 id="KARD photo caption">KARD at M Countdown</h4>
         <div class="btn-group">
-            <button type="button" onclick=imgSwap() class="ms-2 btn-outline-dark">Change Image</button>
-            <button type="button" onclick=imgShrink() class="ms-2 btn-outline-dark">Shrink Image</button>
-            <button type="button" onclick=imgGrow() class="ms-2 btn-outline-dark">Grow Image</button>
+            <button type="button" id="imgSwap" class="ms-2 btn-outline-dark">Change Image</button>
+            <button type="button" id="imgShrink" class="ms-2 btn-outline-dark">Shrink Image</button>
+            <button type="button" id='imgGrow' class="ms-2 btn-outline-dark">Grow Image</button>
             <button type="button" onclick=memberAdd() class="ms-2 btn-outline-dark">Add Random Member</button>
         </div>
     </div>
