--- a/DOM/DOMexercise.html
+++ b/DOM/DOMexercise.html
@@ -17,6 +17,10 @@
     <p id="passwordSubmitted">No Password Submissions</p>
 </div>
 
+<!--Q2-->
+<div>
+    <button type="button" id="changeBG">Change Background</button>
+</div>
 
 <script src="DOMexercise.js"></script>
 </body>
