--- a/DOM/DOMexamples.html
+++ b/DOM/DOMexamples.html
@@ -13,7 +13,7 @@
 <body>
 <div class="row">
     <div class="col container pt-2 m-2 text-center" id="KARD Display">
-        <img src="KARD M Countdown.webp" alt="KARD at M Countdown" id="KARD photo" class="pb-2">
+        <img src="https://github.com/Luhua-codes/STEMingUP2022_Curriculum/blob/main/DOM/KARD%20M%20Countdown.webp" alt="KARD at M Countdown" id="KARD photo" class="pb-2">
         <h4 id="KARD photo caption">KARD at M Countdown</h4>
         <div class="btn-group">
             <button type="button" id="imgSwap" class="ms-2 btn-outline-dark">Change Image</button>
