useEffect Example added

--- a/React/index.html
+++ b/React/index.html
@@ -5,7 +5,7 @@
     <title>React Examples</title>
 </head>
 <body>
-<div id="root"></div>
-<script src="index.jsx"></script>
+<div id='root'></div>
+<script type="module" src="useEffectExample.jsx"></script>
 </body>
 </html>
